2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without BitTorrent support.
	* src/Metalink2RequestGroup.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on Mac OS X
	* src/TimerA2.h

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added warning for the system which lacks clock_gettime with
	CLOCK_MONOTONIC.
	* src/MultiUrlRequestInfo.cc
	* src/TimerA2.cc
	* src/TimerA2.h

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed redundant method call for DownloadEngine.
	* src/DownloadCommand.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that hash check hangs when aria2.pause is issued
	while aria2 is checking piece hashes.  Fixed the bug that the
	download is paused after file allocation completion even if
	aria2.pause is issued during file allocation.
	* src/CheckIntegrityCommand.cc
	* src/FileAllocationCommand.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added nsl to search-libs for getaddrinfo on opensolaris
	* configure.ac

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on opensolaris
	* configure.ac
	* src/Logger.h
	* src/GZipEncoder.h

2010-04-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added aria2.pauseAll, aria2.forcePauseAll and aria2.unpauseAll
	XML-RPC method.
	* doc/aria2c.1.txt
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2010-04-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added aria2.forcePause XML-RPC command.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2010-04-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use global::wallclock
	* src/DHTBucket.cc
	* src/DHTMessageTrackerEntry.cc
	* src/DHTMessageTrackerEntry.h
	* src/DefaultBtInteractive.cc