@@ -1,5 +1,10 @@
 2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Added missing serialize_session.meta4 to EXTRA_DIST
+	* test/Makefile.am
+
+2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Fixed compile error without BitTorrent support.
 	* src/Metalink2RequestGroup.cc
 
